ensure black border on ios

--- a/src/components/inputs/inputs.scss
+++ b/src/components/inputs/inputs.scss
@@ -63,6 +63,7 @@ button {
 
 select {
   color: black;
+  border: 2px solid black;
   -webkit-appearance: menulist;
 }
 
